# kasparro-agentic-saad-ilkal

./: .env  .env.example  Dockerfile  README.md  assignment.md  pyproject.toml  render.yaml  requirements.txt  setup.py  validate_pipeline.py
agents/: __init__.py  comparison_agent.py  faq_agent.py  graph.py  llm_agents.py  nodes.py  orchestrator.py  parser_agent.py  product_page_agent.py  question_agent.py  template_agent.py
api/: main.py
core/: __init__.py  config.py  dag.py  errors.py  graph_state.py  job_manager.py  llm_factory.py  logging.py  models.py  prompts.py  schema_validator.py  schemas.py  state.py  validator.py
data/: product_b_data.json  product_data.json
docs/: projectdocumentation.md
frontend/: app.js  index.html  styles.css
logic_blocks/: __init__.py  benefits_block.py  comparison_block.py  ingredient_block.py  usage_block.py
output/: comparison_page.json  faq.json  product_page.json
output/.state/: checkpoint_20251209_044953.json  checkpoint_20251209_045036.json  checkpoint_20251209_050431.json  checkpoint_20251209_053928.json
prompts/: comparison_page.txt  faq_generator.txt  product_page.txt  question_generator.txt
templates/: comparison_template.json  faq_template.json  product_template.json
tests/: test_agents.py  test_graph.py  test_logic_blocks.py  test_orchestrator.py
